-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 14
-
Component/s: hotspot
-
b16
-
x86_64
-
windows
The following test failed due to "fatal error: LEAF method calling lock?":
sun/tools/jstatd/TestJstatdDefaults.java
Here's a snippet from the log file:
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=t:/workspace/open/src/hotspot/share/runtime/thread.cpp:1035
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:/workspace/open/src/hotspot/share/runtime/thread.cpp:1035), pid=1816, tid=692
# fatal error: LEAF method calling lock?
#
# JRE version: Java(TM) SE Runtime Environment (14.0+10) (fastdebug build 14-ea+10-332)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+10-332, mixed mode, sharing, tiered, compressed oops, g1 gc, windows-amd64)
# Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_open_test_jdk_svc_tools\\scratch\\2\\hs_err_pid1816.mdmp
#
# An error report file with more information is saved as:
# T:\\testoutput\\test-support\\jtreg_open_test_jdk_svc_tools\\scratch\\2\\hs_err_pid1816.log
[2019-08-15T02:22:09.434533400Z] Waiting for completion for process 1816
[2019-08-15T02:22:09.434533400Z] Waiting for completion finished for process 1816
ProcessThread.stopProcess() will kill process
[2019-08-15T02:22:09.543912800Z] Gathering output for process 9936
[2019-08-15T02:22:09.559529700Z] Waiting for completion for process 9936
[2019-08-15T02:22:09.559529700Z] Waiting for completion finished for process 9936
--- ProcessLog ---
cmd: c:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-14+10-332\\windows-x64-debug.jdk\\jdk-14\\fastdebug\\bin\\jstatd.exe -J-XX:+UsePerfData -J-Djava.security.policy=C:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-14+10-332\\src.full\\open\\test\\jdk\\sun\\tools\\jstatd\\all.policy
exitvalue: 1
stderr:
stdout:
----------System.err:(42/3775)*----------
sun/tools/jstatd/TestJstatdDefaults.java
Here's a snippet from the log file:
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=t:/workspace/open/src/hotspot/share/runtime/thread.cpp:1035
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:/workspace/open/src/hotspot/share/runtime/thread.cpp:1035), pid=1816, tid=692
# fatal error: LEAF method calling lock?
#
# JRE version: Java(TM) SE Runtime Environment (14.0+10) (fastdebug build 14-ea+10-332)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+10-332, mixed mode, sharing, tiered, compressed oops, g1 gc, windows-amd64)
# Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_open_test_jdk_svc_tools\\scratch\\2\\hs_err_pid1816.mdmp
#
# An error report file with more information is saved as:
# T:\\testoutput\\test-support\\jtreg_open_test_jdk_svc_tools\\scratch\\2\\hs_err_pid1816.log
[2019-08-15T02:22:09.434533400Z] Waiting for completion for process 1816
[2019-08-15T02:22:09.434533400Z] Waiting for completion finished for process 1816
ProcessThread.stopProcess() will kill process
[2019-08-15T02:22:09.543912800Z] Gathering output for process 9936
[2019-08-15T02:22:09.559529700Z] Waiting for completion for process 9936
[2019-08-15T02:22:09.559529700Z] Waiting for completion finished for process 9936
--- ProcessLog ---
cmd: c:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-14+10-332\\windows-x64-debug.jdk\\jdk-14\\fastdebug\\bin\\jstatd.exe -J-XX:+UsePerfData -J-Djava.security.policy=C:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-14+10-332\\src.full\\open\\test\\jdk\\sun\\tools\\jstatd\\all.policy
exitvalue: 1
stderr:
stdout:
----------System.err:(42/3775)*----------
- relates to
-
JDK-8226228 Make Threads_lock an always safepoint checked lock.
-
- Resolved
-