8229778: TestJstatdDefaults.java failed due to "fatal error: LEAF method calling lock?"

Reviewed-by: dholmes, dcubed